package games.hangman;

import interfaces.IHangmanPlayer;
import model.player.Human;

public class HumanHangman extends Human implements IHangmanPlayer {
    
    public void selectWord(){

    }

    public void tryLetter(){

    }

    public void guessWord(){

    }

    public void askForAHint(){
        
    }

}
