package games.tictactoe;

import interfaces.ITTTPlayer;
import model.player.Bot;

public class BotTTT extends Bot implements ITTTPlayer {

    public void returnPosition(){
        
    }


}
