package games.tictactoe;

public interface ITTTPlayer {
    
    public int returnPosition();

}
