package games.tictactoe;

public enum SquareValue {
    
    X, O, EMPTY

}
