package interfaces;

public interface IGame {
    
    public void selectPlayers();
    public void go();
    public void round();
    public void turn();

}
