package statistics;

import utils.Terminal;

public class Statistic {

    private String name;

    public Statistic(String name){
        this.name = name;
    }

    public  String getName() {return name;}

    public void setName(String name) {this.name = name;}

}
