package games.hangman;

import interfaces.IHangmanPlayer;
import model.player.Bot;
import statistics.StatisticsPlayer;

public class BotHangman extends Bot implements IHangmanPlayer {
 
    public BotHangman(String name, StatisticsPlayer stats){
        super(name, stats);
    }

    public void selectWord(){

    }

    public void tryLetter(){

    }

    public void guessWord(){

    }

    public void askForAHint(){
        
    }

}
