public class Bot extends Player{
    
    public Bot(String name){
        super(name);
    }

}
