package model.player;

import statistics.StatisticsPlayer;

public abstract class Human extends Player{
    
    public Human(String name, StatisticsPlayer stats){
        super(name, stats);
    }

}
