@startuml ClassHangman

class Program{
    Hangman hangman
    TicTacToe ttt
    ArrayList<Player> listPlayers
    StatisticsGame stats
    void start()
    void menu()
}

package interfaces  {

    interface IHangmanPlayer {
        void selectWord()
        void tryLetter()
        void guessWord()
        void askForAHint()
    }

    interface ITTTPlayer {
        void returnPosition()
    }

    interface IGame {
        void selectPlayers()
        void go()
        void round()
        void turn()
    }

}

package PlayerModel {

    class Player {
        String name
        StatisticsPlayer stats
    }


    class Bot {
    }

    class Human{
    }


}

package games {

    package tictactoe{

        class HumanTTT{
            void returnPosition()
        }

        class BotTTT{
            void returnPosition()
        }


        class TicTacToe {
            Board board
            Player player1
            Player player2
            void selectPlayers()
            void go()
            void round()
            void turn()
        }

        class Board {
            Square[][] square
            void printBoard()
            void verifyPosition()
            void isTicTacToe()
            void moveCoin()
        }

        class Square {
            SquareValue value
        }

        enum SquareValue {
            X,
            O,
            EMPTY
        }

    }

    package hangman {
        class Hangman {
            Word myWord
            Player player1
            Player player2
            int remainingAttemps
            int guessingAttemps
            void selectPlayers()
            void go()
            void round()
            void turn()
            void giveAHint()
        }

        class Word{
            String originalWord
            String hiddenWord
        }

        class HumanHangman{
            void selectWord()
            char tryLetter()
            void guessWord()
            void askForAHint()        
        }

        class BotHangman{
            void selectWord()
            char tryLetter()
            void guessWord()
            void askForAHint()
        }


    }

}

class StatisticsPlayer {
    ArrayList<Statistic> listStatistics

}

class Statistic {
    boolean win
    boolean lose 
}



Program *--> Hangman
Program *--> TicTacToe
Program *--> "10" Player

IGame --|> Hangman
IGame --|> TicTacToe

Hangman *--> "2" Player
Hangman *--> Word
Human --|> Player
Bot --|> Player

TicTacToe *--> Board
Board *--> "3x3" Square
Square *--> SquareValue
TicTacToe *--> "2" Player


Player *--> StatisticsPlayer
StatisticsPlayer *--> Statistic

BotHangman <|-- IHangmanPlayer
HumanHangman <|-- IHangmanPlayer

HumanHangman --|> Human
HumanTTT --|> Human

BotHangman --|> Bot
BotTTT --|> Bot

BotTTT <|-- ITTTPlayer
HumanTTT <|-- ITTTPlayer


@enduml